# AstrBot

./: AGENTS.md  CLAUDE.md  CODE_REVIEW_ISSUES.md  README.md  README_en.md  README_fr.md  README_ja.md  README_ru.md  README_zh-TW.md  README_zh.md  TODO-list.md  astrbot.code-workspace  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: coverage_test.yml  pr-checklist-check.yml  release.yml  smoke_test.yml
.serena/: project.yml
.sisyphus/: ralph-loop.local.md
astrbot-sdk/: .gitignore  CLAUDE.md  README.md  pyproject.toml
astrbot-sdk/.github/instructions/: INSTRUCTIONS.instructions.md
astrbot-sdk/.github/workflows/: lint.yml
astrbot-sdk/src/astrbot_sdk/: AGENTS.md  _command_model.py  _plugin_logger.py  _star_runtime.py  cli.py  commands.py  context.py  conversation.py  decorators.py  errors.py  events.py  message_components.py  message_result.py  star.py  testing.py  types.py
astrbot-sdk/src/astrbot_sdk/clients/: files.py  provider.py  session.py
astrbot-sdk/src/astrbot_sdk/docs/: 01_context_api.md  06_error_handling.md  INDEX.md
astrbot-sdk/src/astrbot_sdk/docs/api/: decorators.md  errors.md  message_components.md  utils.md
astrbot-sdk/src/astrbot_sdk/llm/: entities.py  providers.py  tools.py
astrbot-sdk/src/astrbot_sdk/protocol/: __init__.py  _builtin_schemas.py  messages.py
astrbot-sdk/src/astrbot_sdk/runtime/: __init__.py  _capability_router_builtins.py  bootstrap.py  capability_dispatcher.py  capability_router.py  environment_groups.py  handler_dispatcher.py  limiter.py  peer.py  supervisor.py  transport.py  worker.py
astrbot/core/: __init__.py  astr_agent_hooks.py  astr_agent_run_util.py  astr_agent_tool_exec.py  astr_main_agent.py  astr_main_agent_resources.py  (+5 more)
astrbot_sdk/: PROJECT_ARCHITECTURE.md  __init__.py  __main__.py  _command_model.py  _invocation_context.py  _plugin_logger.py  _star_runtime.py  _testing_support.py  _typing_utils.py  cli.py  commands.py  context.py  decorators.py  errors.py  events.py  filters.py  message_components.py  message_result.py  message_session.py  plugin_kv.py  schedule.py  session_waiter.py  star.py  star_tools.py  testing.py  types.py
dashboard/: package.json  pnpm-lock.yaml
docs/: SDK_INTEGRATION_PLAN.md
scripts/: sync-sdk.ps1  sync-sdk.sh
tests/: conftest.py  test_backup.py  test_chat_route.py  test_computer_skill_sync.py  test_dashboard.py  test_db_backward_compat.py  test_openai_source.py  test_platform_register.py  test_plugin_manager.py  test_profile_aware_tools.py  test_skill_manager_sandbox_cache.py  test_smoke.py  test_telegram_adapter.py  test_tool_loop_agent_runner.py
(+248 files in other folders)
