[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astrbot-sdk"
version = "0.1.0"
description = "AstrBot SDK with s5r runtime, worker protocol, and plugin tooling"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "aiohttp>=3.13.2",
    "anthropic>=0.72.1",
    "certifi>=2025.10.5",
    "click>=8.3.0",
    "docstring-parser>=0.17.0",
    "google-genai>=1.50.0",
    "loguru>=0.7.3",
    "msgpack>=1.1.1",
    "openai>=2.7.2",
    "pydantic>=2.12.3",
    "pyyaml>=6.0.3",
    "uv>=0.9.17",
]

[project.scripts]
astr = "astrbot_sdk.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/astrbot_sdk"]
exclude = ["/src/astrbot_sdk/AGENTS.md"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

# ============================================================
# Optional Dependencies
# ============================================================
